@@ -158,6 +158,7 @@ Version 0.0.4b (in progress)
 * [Fixed] Force permissions on install folder.
 * [Fixed] seasons_h table entry deleted if there is no data for season.
 * [Added] Note regarding manual deletion of install folder to INSTALL.md.
+* [Fixed] seasons_h table entry for current season only created if data for current season exists.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
